   * Allow compile with NetBSD and make LP64 compliant video_freebsd.c (Andreas Wrede)
   * Avoid compile vloopback in BSD (Angel Carpintero)
   * V4L2 fourcc GRBG not supported, updated default value for v4l2_palette 17. (Isaac Richter)
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2009x10x29x222753
   * Exit when image dimension are not modulo 16. (Angel Carpintero)

3.2.11.1 Sumary of Changes

Bugfixes
   * Fix Segfault on reload or quit for vloopback (maybe other v4l1 devices too) (Peter Holik)
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2009x06x17x090603
   * Fix fd leaks in external pipe. (Angel Carpintero)
   * Avoid possible stack smashing in v4l_open_vidpipe(). (Angel Carpintero)
   * Allow compile with OpenSuse ffmpeg package (15594svn-20081010)
     http://www.lavrsen.dk/twiki/bin/view/Motion/SupportQuestion2008x10x25x070400 (Angel Carpintero)
   * Fix warning for syslog().  (Angel Carpintero)
   * Better detection of ffmpeg
     http://www.lavrsen.dk/foswiki/pub/Motion/ReleaseNoteMotion3x2x11/ffmpeg-detection.diff.gz
     (Angel Carpintero)
   * Fix warning for __USE_GNU redefined (Peter Holik)
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2009x06x17x122137 (Peter Holik)
   * Allow compile with NetBSD and make LP64 compliant video_freebsd.c (Andreas Wrede)
   * Fix segfault for new libjpeg v7. (Angel Carpintero)

3.2.11 Summary of Changes

Features
   * Added support for ffmpeg-2008-04-09 port version of FreeBSD.
   * Remove mjpegtools dependencies and integrate only needed functions from library. (Angel Carpintero)
   * Allow change/setup framerate in FreeBSD using pwcbsd. (Angel Carpintero)
   * Get rid of ffmpeg-config in configure.in for debian. (Angel Carpintero)


Bugfixes
   * Fix Problem Encoding 1280x1024 resolution videos
     http://www.lavrsen.dk/twiki/bin/view/Motion/SupportQuestion2008x06x11x183727 (Angel Carpintero)