@@ -46,6 +46,8 @@ Bugfixes
    * V4L2 fourcc GRBG not supported, updated default value for v4l2_palette 17. (Isaac Richter)
      http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2009x10x29x222753
    * Exit when image dimension are not modulo 16. (Angel Carpintero)
+   * Avoid logs flooding using some options of netcam_keepalive and try to discard images with 
+     weird header Content-Lenght 0. (Angel Carpintero)
 
 3.2.11.1 Sumary of Changes
 
